[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp4"
version = "0.1.0"
description = "User Manager Project"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "pytest-cov",
    "flake8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
